<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_beranda"
                android:icon="@drawable/ic_beranda"
                android:title="@string/menu_beranda"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile"/>
        <item
                android:id="@+id/nav_upload_ktp"
                android:icon="@drawable/ic_upload_ktp"
                android:title="@string/menu_upload_ktp"/>
        <item
                android:id="@+id/nav_ganti_sandi"
                android:icon="@drawable/ic_ganti_password"
                android:title="@string/menu_kata_sandi"/>
        <item
                android:id="@+id/nav_sayarat_ketentuan"
                android:icon="@drawable/ic_syarat"
                android:title="@string/menu_syarat_ketentuan"/>
        <item
                android:id="@+id/nav_hubungi_kami"
                android:icon="@drawable/ic_contact_mail"
                android:title="@string/menu_hubungi_kami"/>
        <item
                android:id="@+id/nav_tentang_kami"
                android:icon="@drawable/ic_tentang_kami"
                android:title="@string/menu_tentang_kami"/>
        <item
                android:id="@+id/nav_keluar"
                android:icon="@drawable/ic_keluar"
                android:title="@string/menu_keluar"/>
    </group>


</menu>
