<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#FFFF"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

        <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/logo"
                android:id="@+id/imageView" android:layout_marginTop="60dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                tools:ignore="ContentDescription"/>
            <EditText
                    android:hint="@string/login_username_hint"
                    android:layout_width="300sp"
                    android:layout_height="43dp"
                    android:drawablePadding="10sp"
                    android:textSize="14sp"
                    android:textColor="#413c3c"
                    android:textColorHint="#413c3c"
                    android:fontFamily="sans-serif-condensed"
                    android:drawableStart="@drawable/ic_username"
                    android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:ignore="Autofill,TextFields"/>
            <EditText
                    android:hint="@string/login_password_hint"
                    android:layout_width="300sp"
                    android:layout_height="40sp"
                    android:drawablePadding="10sp"
                    android:inputType="textPassword"
                    android:textColorHint="#413c3c"
                    android:textSize="14sp"
                    android:textColor="#413c3c"
                    android:fontFamily="sans-serif-condensed"
                    android:drawableStart="@drawable/ic_password"
                    android:id="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
                    tools:ignore="Autofill,TextFields"/>
            <TextView
                    android:text="@string/link_lupa_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:clickable="true"
                    android:textColor="#ff1919"
                    android:linksClickable="false"
                    android:id="@+id/forgot_account"
                    android:selectAllOnFocus="false"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_login" app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:focusable="true"/>
            <TextView
                    android:text="@string/link_buat_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:fontFamily="sans-serif-condensed"
                    android:clickable="true"
                    android:textColor="#ff1919"
                    android:linksClickable="false"
                    android:selectAllOnFocus="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/forgot_account"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    android:focusable="true"/>
            <Button
                    android:text="@string/btn_login"
                    android:textColor="#FFFF"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="300sp"
                    android:layout_height="40sp"
                    android:textSize="12sp"
                    android:background="@drawable/rounded_btn"
                    android:id="@+id/button_login"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.504"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
